////////////////////////////////////////////////////////////////////////////////////////////////////
///
/// @file      AdaptIQ.proto
///
/// @brief     This header file describes the protocol buffer messages associated with AdaptIQ.
///            to the Product Controller state machine.
///
/// @author    Stuart J. Lumby
///
/// @attention Copyright (C) 2017 Bose Corporation All Rights Reserved
///
///            Bose Corporation
///            The Mountain Road,
///            Framingham, MA 01701-9168
///            U.S.A.
///
///            This program may not be reproduced, in whole or in part, in any form by any means
///            whatsoever without the written permission of Bose Corporation.
///
////////////////////////////////////////////////////////////////////////////////////////////////////

package ProductPb;

////////////////////////////////////////////////////////////////////////////////////////////////////
///                       AdaptIQ Status Message Structure                                       ///
////////////////////////////////////////////////////////////////////////////////////////////////////
message AdaptIQStatus
{
    optional string     smState             = 1;
    optional string     mode                = 2;
    optional int32      currentLocation     = 3;
    optional int32      currentSpeaker      = 4;
    optional bool       hpConnected         = 5;
    optional int32      errorCode           = 6;

    message properties
    {
        repeated string     supportedActions    = 1;
        repeated string     supportedModes      = 2;
    }
}


////////////////////////////////////////////////////////////////////////////////////////////////////
///                                        End of File                                           ///
////////////////////////////////////////////////////////////////////////////////////////////////////
